test/cases/compile_errors/orelse_on_undefined_value.zig
comptime {
    const a: ?bool = undefined;
    _ = a orelse false;
}

// error
//
// :3:11: error: use of undefined value here causes illegal behavior
